# Diplom

./: .gitignore  Plan.docx  Plan.md  VKR_skeleton_Lobov_NPMmd-02_2026_mathfixed.docx  copy_appendix_plots.sh  prog_GPU_results  run_python.bat  ~$чет осень основной текст.docx  ~WRL1149.tmp  Обозначения и сокращения.html  Обозначения.md  Отчет осень основной текст.docx
Program_files/: experiments.py  model.py  (+5 more)
prog_GPU/: .gitignore  Cargo.toml  a.txt
prog_GPU/cuda/: sim_kernel.cu  sim_kernel.ptx
prog_GPU/py/: 2.0 report&plots.ipynb  arrival_sensitivity_plots.ipynb  export_values.py  launcher.py  plots.py  plots_reworked.py  values.py  values_validation.py  workload_sensitivity_plots_v2.ipynb
prog_GPU/results/20260411_203807__baseline_gpu/: aggregated_summary.csv  metric_summaries.csv  suite_result.json  suite_summary.txt
prog_GPU/results/20260411_204350__baseline_gpu/: aggregated_summary.csv  run_summaries.csv  suite_result.json  suite_summary.txt
prog_GPU/results/20260411_221631__baseline_gpu/: aggregated_summary.csv  metric_summaries.csv  run_summaries.csv  suite_result.json  suite_summary.txt
prog_GPU/results/20260411_232206__baseline_gpu/: aggregated_summary.csv  run_summaries.csv  suite_result.json  suite_summary.txt
prog_GPU/results/20260412_000836__baseline_gpu/: aggregated_summary.csv  metric_summaries.csv  suite_result.json  suite_summary.txt
prog_GPU/src/: cli.rs  experiments.rs  main.rs  output.rs  params.rs  run.rs  scenario_grid.rs  stats.rs
prog_GPU/src/backend/: cpu_ref.rs  gpu.rs  mod.rs
prog_files_rust/: .gitignore  Cargo.toml
prog_files_rust/py/: experiment_params.py  experiment_values.py  export_values.py  launcher.py  plots.py  values_guide.md  values_validation.py
prog_files_rust/results_rust/: aggregated_summary.csv  all_runs.csv  suite_report.txt  suite_result.json
prog_files_rust/src/: experiments.rs  main.rs  model.rs  params.rs  plots.rs  run.rs  simulation.rs
(+85 files in other folders)
