[package]
name = "prog_files_rust_gpu"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
default = ["cpu-ref"]
gpu = ["dep:cudarc"]
cpu-ref = ["dep:rand", "dep:rand_distr", "dep:rayon"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

rand = { version = "0.8", optional = true }
rand_distr = { version = "0.4", optional = true }
rayon = { version = "1", optional = true }

cudarc = { version = "0.19.4", optional = true, default-features = false, features = [
  "driver",
  "nvrtc",
  "dynamic-loading",
  "cuda-version-from-build-system",
  "fallback-latest"
] }

[profile.release]
debug = 1
overflow-checks = false
lto = "thin"
codegen-units = 1